# excel2py

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE.TXT  README.md  explain.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-03-26-openrouter-provider.md  2026-03-26-verification-loop.md
docs/superpowers/specs/: 2026-03-26-openrouter-provider-design.md  2026-03-26-verification-loop-design.md
src/excel2py/: __init__.py  __main__.py  cli.py  config.py  converter.py  exceptions.py  models.py  verifier.py
src/excel2py/llm/: agno_provider.py  agno_team.py  anthropic_provider.py  base.py  factory.py  google_provider.py  langchain_team.py  openai_provider.py  openrouter_provider.py
src/excel2py/parsers/: base.py  macro_extractor.py  xlsb_parser.py  xlsx_parser.py
src/excel2py/prompts/: templates.py
tests/: conftest.py  test_cli.py  test_converter.py  test_verifier.py
tests/test_llm/: test_anthropic_provider.py  test_factory.py  test_openai_provider.py  test_openrouter_provider.py
tests/test_parsers/: test_macro_extractor.py  test_xlsb_parser.py  test_xlsx_parser.py
tests/test_prompts/: test_templates.py
