[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "excel2py"
version = "0.1.0"
description = "Convert Excel spreadsheets to Python scripts using GenAI"
requires-python = ">=3.13"

dependencies = [
    "xlsb-reader>=0.3.0",
    "oletools>=0.60.2",
    "openai>=2.0.0",
    "anthropic>=0.80.0",
    "google-genai>=1.0.0",
    "click>=8.1",
    "pydantic-settings>=2.7",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
    "pandas",
    "agno",
    "langgraph>=0.3",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.9",
]

[project.scripts]
excel2py = "excel2py.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/excel2py"]

[tool.ruff]
line-length = 100
target-version = "py314"
